
Revision 4.3.10, released 2017-08-XX
------------------------------------

- Fix to MibTableRow.setFromName() to keep the input parameter type when
  it propagates to the return value. Before this fix
  ObjectIdentity.prettyPrint() may crash when rendering malformed SNMP
  table indices.

Revision 4.3.9, released 2017-07-26
-----------------------------------

- Deprecated UsmUserData initializaton parameters removed
- Adapted to pyasn1 API changes introduced by release 0.3.1
- Fix to a crash happening on inbound SNMP message having non-initialized fields
- Fix to (persistent SNMP engine ID) file writing on Windows

Revision 4.3.8, released 2017-06-15
-----------------------------------

- Security fix to the bug introduced in 4.3.6: msgAuthoritativeEngineTime
  stopped changing over time and was returning the same timestamp (process
  start time). This fix makes it growing as it should.

Revision 4.3.7, released 2017-05-29
-----------------------------------

* Fixed import error in legacy NotificationOriginator implementation

Revision 4.3.6, released 2017-05-28
-----------------------------------

- More instrumentation hooks added addressing security failures
  auditing needs.
- SNMP table indices correlation implemented within SMI framework.
  The opaque InetAddress type implemented. INET-ADDRESS-MIB included
  into the distribution.
- SNMP table indices resolution logic made more robust against
  malformed indices.
- Fixes to *lexicographicMode* option documentation to make it
  unambiguous.
- The `ErrorIndication` object is now derived from `Exception` so
  that it could be raised in exceptions.
- The `errorIndication` values produced by various parts of
  SNMP engine unified to be `ErrorIndication` instances. This fixes
  an issue with Twisted.
- Embedded MIB modules rebuilt with the latest pysmi adding previously
  missing attributes like `status`, `description` etc.
- Fixed potential SNMP engine crash on handling incoming message